statusfy/base/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: statusfy
  name: statusfy
spec:
  replicas: 1
  selector:
    name: statusfy
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: statusfy
      name: statusfy
    spec:
      containers:
        - image: statusfy:latest
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: nginx
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              memory: 128Mi
  test: false
