statusfy/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: status-thoth-station-ninja
spec:
  to:
    kind: Service
    name: statusfy
